# vds-qt

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: version.h.in
src/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
src/common/: vdtk_helper_functions.h
src/fileio/: export_image_series_dialog.cpp  export_image_series_dialog.h  export_item.cpp  export_item.h  export_raw_3D_dialog.cpp  export_raw_3D_dialog.h  import_binary_slices_dialog.cpp  import_binary_slices_dialog.h  import_item.cpp  import_item.h  import_item_list.cpp  import_item_list.h  import_raw_3D_dialog.cpp  import_raw_3D_dialog.h
src/gui/: main_window.h  main_window.ui  volume_view_GL.h
src/qt_resources/: resources.qrc
src/qt_resources/stylesheets/: style.qss
src/renderer/: light_source.cpp  light_source.h  light_source_renderer_gl.cpp  light_source_renderer_gl.h  raycast_renderer_gl.cpp  raycast_renderer_gl.h  volume_data_3D_texture.cpp  volume_data_3D_texture.h
src/renderer/shader/: shader_code_constants.h  shader_generator.cpp  shader_generator.h  shader_settings.h
src/renderer/textures/: noise_texture_2D.cpp  noise_texture_2D.h  texture_units.h  volume_data_3D_texture.cpp  volume_data_3D_texture.h
src/tools/: resize_volume_data.cpp  resize_volume_data.h
src/widgets/: expandable_section_widget.cpp  expandable_section_widget.h  histogram_view_GL.cpp  histogram_view_GL.h  slice_view_GL.cpp  slice_view_GL.h  volume_view_GL.cpp  volume_view_GL.h
